==> RT-Thread/rt-thread/bsp/mm32f103x/Libraries/MM32F103/HAL_lib/src/HAL_flash.c <==
#include "HAL_flash.h"
#define ACR_LATENCY_Mask         ((uint32_t)0x00000038)
#define ACR_HLFCYA_Mask          ((uint32_t)0xFFFFFFF7)
#define ACR_PRFTBE_Mask          ((uint32_t)0xFFFFFFEF)
#define ACR_PRFTBS_Mask          ((uint32_t)0x00000020)
#define CR_PG_Set                ((uint32_t)0x00000001)
#define CR_PG_Reset              ((uint32_t)0x00001FFE)
#define CR_PER_Set               ((uint32_t)0x00000002)
#define CR_PER_Reset             ((uint32_t)0x00001FFD)
#define CR_MER_Set               ((uint32_t)0x00000004)
#define CR_MER_Reset             ((uint32_t)0x00001FFB)
#define CR_OPTPG_Set             ((uint32_t)0x00000010)
#define CR_OPTPG_Reset           ((uint32_t)0x00001FEF)
#define CR_OPTER_Set             ((uint32_t)0x00000020)
#define CR_OPTER_Reset           ((uint32_t)0x00001FDF)
#define CR_STRT_Set              ((uint32_t)0x00000040)
#define CR_LOCK_Set              ((uint32_t)0x00000080)
#define RDPRT_Mask               ((uint32_t)0x00000002)
#define WRP0_Mask                ((uint32_t)0x000000FF)
#define WRP1_Mask                ((uint32_t)0x0000FF00)
#define WRP2_Mask                ((uint32_t)0x00FF0000)
#define WRP3_Mask                ((uint32_t)0xFF000000)
#define RDP_Key                  ((uint16_t)0x00A5)
#define FLASH_KEY1               ((uint32_t)0x45670123)
#define FLASH_KEY2               ((uint32_t)0xCDEF89AB)
#define EraseTimeout             ((uint32_t)0x00000FFF)
#define ProgramTimeout           ((uint32_t)0x0000000F)

FLASH_Status FLASH_ErasePage(uint32_t Page_Address)
{
    FLASH_Status status = FLASH_COMPLETE;
    /* Check the parameters */
    assert_param(IS_FLASH_ADDRESS(Page_Address));

    /* Wait for last operation to be completed */
    status = FLASH_WaitForLastOperation(EraseTimeout);

    if(status == FLASH_COMPLETE)
    {
        /* if the previous operation is completed, proceed to erase the page */
        FLASH->CR |= CR_PER_Set;
        FLASH->AR = Page_Address;
        FLASH->CR |= CR_STRT_Set;

        /* Wait for last operation to be completed */
        status = FLASH_WaitForLastOperation(EraseTimeout);
        if(status != FLASH_BUSY)
        {
            /* if the erase operation is completed, disable the PER Bit */
            FLASH->CR &= CR_PER_Reset;
        }
    }

    /* Return the Erase Status */
    return status;
}

FLASH_Status FLASH_EraseOptionBytes(void)
{
    FLASH_Status status = FLASH_COMPLETE;

    /* Wait for last operation to be completed */
    status = FLASH_WaitForLastOperation(EraseTimeout);
    if(status == FLASH_COMPLETE)
    {
        /* Authorize the small information block programming */
        FLASH->OPTKEYR = FLASH_KEY1;
        FLASH->OPTKEYR = FLASH_KEY2;

        /* if the previous operation is completed, proceed to erase the option bytes */
        FLASH->CR |= CR_OPTER_Set;
        FLASH->AR = 0x1FFFF800;
        FLASH->CR |= CR_STRT_Set;
        /* Wait for last operation to be completed */
        status = FLASH_WaitForLastOperation(EraseTimeout);

        if(status == FLASH_COMPLETE)
        {
            /* if the erase operation is completed, disable the OPTER Bit */
            FLASH->CR &= CR_OPTER_Reset;

            /* Enable the Option Bytes Programming operation */
            FLASH->CR |= CR_OPTPG_Set;

            /* Enable the readout access */
            OB->RDP = RDP_Key;

            /* Wait for last operation to be completed */
            status = FLASH_WaitForLastOperation(ProgramTimeout);

            if(status != FLASH_BUSY)
            {
                /* if the program operation is completed, disable the OPTPG Bit */
                FLASH->CR &= CR_OPTPG_Reset;
            }
        }
        else
        {
            if (status != FLASH_BUSY)
            {
                /* Disable the OPTPG Bit */
                FLASH->CR &= CR_OPTPG_Reset;
            }
        }
    }
    /* Return the erase status */
    return status;
}

FLASH_Status FLASH_ProgramOptionByteData(uint32_t Address, uint8_t Data)
{
    FLASH_Status status = FLASH_COMPLETE;
    /* Check the parameters */
    assert_param(IS_OB_DATA_ADDRESS(Address));



    status = FLASH_WaitForLastOperation(ProgramTimeout);
    if(status == FLASH_COMPLETE)
    {
        /* Authorize the small information block programming */
        FLASH->OPTKEYR = FLASH_KEY1;
        FLASH->OPTKEYR = FLASH_KEY2;
        /* Enables the Option Bytes Programming operation */
        FLASH->CR |= CR_OPTPG_Set;
        *(__IO uint16_t*)Address = Data;

        /* Wait for last operation to be completed */
        status = FLASH_WaitForLastOperation(ProgramTimeout);
        if(status != FLASH_BUSY)
        {
            /* if the program operation is completed, disable the OPTPG Bit */
            FLASH->CR &= CR_OPTPG_Reset;
        }
    }



    /* Return the Option Byte Data Program Status */
    return status;
}

FLASH_Status FLASH_EnableWriteProtection(uint32_t FLASH_Pages)
{
    uint16_t WRP0_Data = 0xFFFF, WRP1_Data = 0xFFFF, WRP2_Data = 0xFFFF, WRP3_Data = 0xFFFF;

    FLASH_Status status = FLASH_COMPLETE;

    /* Check the parameters */
    assert_param(IS_FLASH_WRPROT_PAGE(FLASH_Pages));



    FLASH_Pages = (uint32_t)(~FLASH_Pages);
    WRP0_Data = (uint16_t)(FLASH_Pages & WRP0_Mask);
    WRP1_Data = (uint16_t)((FLASH_Pages & WRP1_Mask) >> 8);
    WRP2_Data = (uint16_t)((FLASH_Pages & WRP2_Mask) >> 16);
    WRP3_Data = (uint16_t)((FLASH_Pages & WRP3_Mask) >> 24);

    /* Wait for last operation to be completed */
    status = FLASH_WaitForLastOperation(ProgramTimeout);

    if(status == FLASH_COMPLETE)
    {
        /* Authorizes the small information block programming */
        FLASH->OPTKEYR = FLASH_KEY1;
        FLASH->OPTKEYR = FLASH_KEY2;
        FLASH->CR |= CR_OPTPG_Set;
        if(WRP0_Data != 0xFF)
        {
            OB->WRP0 = WRP0_Data;

            /* Wait for last operation to be completed */
            status = FLASH_WaitForLastOperation(ProgramTimeout);
        }
        if((status == FLASH_COMPLETE) && (WRP1_Data != 0xFF))
        {
            OB->WRP1 = WRP1_Data;

            /* Wait for last operation to be completed */
            status = FLASH_WaitForLastOperation(ProgramTimeout);
        }
        if((status == FLASH_COMPLETE) && (WRP2_Data != 0xFF))
        {
            OB->WRP2 = WRP2_Data;

            /* Wait for last operation to be completed */
            status = FLASH_WaitForLastOperation(ProgramTimeout);
        }

        if((status == FLASH_COMPLETE) && (WRP3_Data != 0xFF))
        {
            OB->WRP3 = WRP3_Data;

            /* Wait for last operation to be completed */
            status = FLASH_WaitForLastOperation(ProgramTimeout);
        }

        if(status != FLASH_BUSY)
        {
            /* if the program operation is completed, disable the OPTPG Bit */
            FLASH->CR &= CR_OPTPG_Reset;
        }
    }



    /* Return the write protection operation Status */
    return status;
}

FLASH_Status FLASH_ReadOutProtection(FunctionalState NewState)
{
    FLASH_Status status = FLASH_COMPLETE;
    /* Check the parameters */
    assert_param(IS_FUNCTIONAL_STATE(NewState));



    status = FLASH_WaitForLastOperation(EraseTimeout);
    if(status == FLASH_COMPLETE)
    {
        /* Authorizes the small information block programming */
        FLASH->OPTKEYR = FLASH_KEY1;
        FLASH->OPTKEYR = FLASH_KEY2;
        FLASH->AR = 0x1ffff800;
        FLASH->CR |= CR_OPTER_Set;
        FLASH->CR |= CR_STRT_Set;
        /* Wait for last operation to be completed */
        status = FLASH_WaitForLastOperation(EraseTimeout);
        if(status == FLASH_COMPLETE)
        {
            /* if the erase operation is completed, disable the OPTER Bit */
            FLASH->CR &= CR_OPTER_Reset;
            /* Enable the Option Bytes Programming operation */
            FLASH->CR |= CR_OPTPG_Set;
            if(NewState != DISABLE)
            {
                OB->RDP = 0x00;
            }
            else
            {
                OB->RDP = RDP_Key;
            }
            /* Wait for last operation to be completed */
            status = FLASH_WaitForLastOperation(EraseTimeout);

            if(status != FLASH_BUSY)
            {
                /* if the program operation is completed, disable the OPTPG Bit */
                FLASH->CR &= CR_OPTPG_Reset;
            }
        }
        else
        {
            if(status != FLASH_BUSY)
            {
                /* Disable the OPTER Bit */
                FLASH->CR &= CR_OPTER_Reset;
            }
        }
    }



    /* Return the protection operation Status */
    return status;
}

FLASH_Status FLASH_UserOptionByteConfig(uint16_t OB_IWDG, uint16_t OB_STOP, uint16_t OB_STDBY)
{
    FLASH_Status status = FLASH_COMPLETE;
    /* Check the parameters */
    assert_param(IS_OB_IWDG_SOURCE(OB_IWDG));
    assert_param(IS_OB_STOP_SOURCE(OB_STOP));
    assert_param(IS_OB_STDBY_SOURCE(OB_STDBY));



    /* Authorize the small information block programming */
    FLASH->OPTKEYR = FLASH_KEY1;
    FLASH->OPTKEYR = FLASH_KEY2;

    /* Wait for last operation to be completed */
    status = FLASH_WaitForLastOperation(ProgramTimeout);

    if(status == FLASH_COMPLETE)
    {
        /* Enable the Option Bytes Programming operation */
        FLASH->CR |= CR_OPTPG_Set;

        OB->USER = ( OB_IWDG | OB_STOP | OB_STDBY) | (uint16_t)0xF8;

        /* Wait for last operation to be completed */
        status = FLASH_WaitForLastOperation(ProgramTimeout);
        if(status != FLASH_BUSY)
        {
            /* if the program operation is completed, disable the OPTPG Bit */
            FLASH->CR &= CR_OPTPG_Reset;
        }
    }



    /* Return the Option Byte program Status */
    return status;
}
